# sen

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  bus.cpp  bus.hxx  cartridge.cpp  cartridge.hxx  constants.hxx  controller.hxx  cpu.cpp  cpu.hxx  create_opcodes_json.py  debugger.hxx  install-deps-fedora.sh  install-deps-ubuntu.sh  install-deps.sh  main.cpp  mapper.cpp  mapper.hxx  opcodes.json  ppu.cpp  ppu.hxx  sen.cpp  sen.hxx  ui.cpp  ui.hxx  util.cpp  util.hxx  vcpkg.json
include/: apu.hxx  bus.hxx  cartridge.hxx  constants.hxx  controller.hxx  cpu.hxx  debugger.hxx  events.hxx  mapper.hxx  ppu.hxx  sen.hxx  ui.hxx  util.hxx
lib/: ImGuiNotify.hpp  crt_core.h  fa.h
src/: apu.cpp  bus.cpp  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  filters.cpp  main.cpp  mapper.cpp  memory.h  mmu.cpp  mmu.h  nes.cpp  nes.hxx  opcode.cpp  opcode.h  options.cpp  options.hxx  ppu.cpp  ppu.h  rom.cpp  rom.h  sen.cpp  ui.cpp  ui.hxx  util.cpp  utils.cpp  utils.h
tests/: cpu_tests.cpp  flatbus.hxx
